--- a/public/styles.css
+++ b/public/styles.css
@@ -1,13 +1,30 @@
+body {
+  background-color: black;
+}
+
 .container {
   max-width: 400px;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  border: 0.2rem solid #fff;
+  border-radius: 2rem;
+  padding: 0.4em;
+  box-shadow: 0 0 .2rem #fff,
+            0 0 .2rem #fff,
+            0 0 2rem #bc13fe,
+            0 0 0.8rem #bc13fe,
+            0 0 2.8rem #bc13fe,
+            inset 0 0 1.3rem #bc13fe; 
+  
+  
+  
+
+  
 }
 
 h1 {
   text-align: center;
+  color: white;
 }
 
 div {
@@ -17,6 +34,8 @@ div {
 label {
   display: inline-block;
   width: 200px;
+  color: white;
+  
 }
 
 input[type="number"] {
